welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:27: error: value Blue is not a member of object java.awt.Color
		faireGauche();avance(6);gauche();avance(2);droite();faireFleur(Color.Blue);avance(2);gauche();avance(2);
                                                                                     ^FlowerCase:33: error: not found: value faireHaut
	faireHaut();
        ^