welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def faireFleur(c:Color) {
	setCouleurBrosse(c);baisseBrosse();leveBrosse();droite();avance();gauche();avance();baisseBrosse();
	leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();
	baisseBrosse();leveBrosse();avance();gauche();avance();gauche();
}

def faireP() {
	avance(4);baisseBrosse();leveBrosse();gauche();
}



def faireGauche() {
	faireFleur(Color.RED);avance(4);faireFleur(Color.CYAN);droite();avance(4);gauche();
	faireFleur(Color.GREEN);recule(4);faireFleur(Color.PINK);avance(2);gauche();avance(2);droite();
	faireFleur(Color.ORANGE);avance();setCouleurBrosse(Color.YELLOW);baisseBrosse();
	leveBrosse();droite();avance(2);
	droite();avance(2);droite();droite();
	for(i<-1 to 4) {
		faireP();
		}
		recule();
	}
	
def Haut() {
		faireGauche();avance(6);gauche();avance(2);droite();faireFleur(Color.Blue);avance(2);gauche();avance(2);
		droite();
}


def growFlowers() {
	faireHaut();
	}